# CS145-RecSys

./: .gitignore  .htaccess  DEPLOYMENT.md  README.md  README_EVAL.md  app.py  app_production.py  checkpoint1_directive.md  checkpoint2_directive.md  checkpoint3_directive.md  cv.py  data_generator.py  deploy.sh  evaluation.py  final_report_guidelines.md  gcn_adaptive_search_results.csv  gcn_cross_validation.py  gradientBoost.py  gradient_boost_adaptive_search_results.csv  gradient_boost_cross_validation.py  graphCN.py  leaderboard.db  logistic_regression.py  logistic_regression_adaptive_search_results.csv  logistic_regression_cross_validation.py  pyproject.toml  recommender_analysis_visualization.ipynb  recommender_analysis_visualization.py  requirements.txt  sample_recommenders.py  script.py  simulator.py  start.sh  stop.sh  submission.py  submission_lr.py  test.py  wsgi.py
recommenders/: hybrid.py
recommenders/checkpoint1/: KNN.py  gradientBoost.py  linearRegression.py  logistic_regression.py
recommenders/checkpoint2/: LSTM.py  RNN.py  sequential_reccomenders.py  transformer.py
recommenders/checkpoint3/: LightGCN.py  graphCN.py  lstm.py  tower.py
sim4rec/modules/: evaluation.py  generator.py
templates/: admin.html  base.html  index.html  leaderboard.html
uploads/: LSTM_06_11_2025_1612_20250611_161721_submission.py  LightGCN_06_11_2025_1604_20250611_171906_submission.py
