[project]
name = "sim4rec"
version = "0.0.2"
description = "Simulator for recommendation algorithms"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.1",
    "jupyterlab>=4.4.0",
    "numpy<2",
    "pandas>=2.0.0",
    "pyarrow>=19.0.1",
    "pyspark>=3.5.5",
    "sdv>=0.19",
    "seaborn>=0.13.2",
    "torch>=2.0.0,<2.3.0",
    "torch-geometric>=2.6.1",
    "werkzeug>=3.1.3",
    "xgboost>=3.0.2",
]
